Fixed sonar issue